// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show total of one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should show total of two items 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,354,211.10
  </h1>
</div>
`;
